# Workshop

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  .vcpkg_deps  CMakeLists.txt  README.md  WORKSPACE.bazel
core/: Application.cpp  Application.h  BUILD.bazel  Common.h  Main.cpp  UI.cpp  UI.h  main.cpp
core/UI/: DemoWindow.h  UIManager.cpp  UIManager.h  UIWindow.h
res/: BUILD.bazel
res/Nodes/: NodeDefinitions.json
res/Shaders/: basic.shader
res/shaders/: basic.glsl  grid.glsl  viewport.glsl
src/: Application.cpp  Application.h  BUILD.bazel  Common.h  Log.cpp  Log.h  common.h
src/Nodes/: GraphEntity.cpp  GraphEntity.h  Node.cpp  Node.h  NodeAttribute.cpp  NodeAttribute.h  NodeGraph.cpp  NodeGraph.h  NodeLink.cpp  NodeLink.h  NodeManager.cpp  NodeManager.h  Socket.h
src/Rendering/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Vertex.h  VertexArray.cpp  VertexArray.h  Viewport.cpp  Viewport.h
src/UI/: DockspaceWindow.h  NodeEditorWindow.cpp  NodeEditorWindow.h  UIManager.cpp  UIManager.h  UIWindow.h  ViewportWindow.cpp  ViewportWindow.h
src/client/: Application.cpp  Application.h  Input.cpp  Input.h  Window.cpp  Window.h  main.cpp
src/client/panels/: BasePanel.h  PanelManager.cpp  PanelManager.h  ViewportPanel.h
src/core/: Color.h  Geometry.h  Log.h  Log_Formatters.h  Time.cpp  Time.h  Transform.h
src/core/rendering/: Camera.h  Framebuffer.h  IndexBuffer.h  Light.h  Renderer.h  Shader.cpp  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
src/nodes/: BaseNode.cpp  BaseNode.h  Parameter.h  Socket.h
src/nodes/geometry_nodes/: Node_Translate.h
tests/: CMakeLists.txt  ExampleTest.cpp
