cc_binary(
    name = "workshop",
    srcs = [
        "Main.cpp",
        "Common.h",

        "Application.h",
        "Application.cpp",

        "UI/UIManager.h",
        "UI/UIManager.cpp",
        "UI/UIWindow.h",
        "UI/DockspaceWindow.h",
        "UI/NodeEditorWindow.h",
        "UI/NodeEditorWindow.cpp",

        "Nodes/NodeManager.h",
        "Nodes/NodeManager.cpp",
        "Nodes/Node.h",
        "Nodes/Node.cpp",
        "Nodes/NodeAttribute.h",
        "Nodes/NodeAttribute.cpp",
        "Nodes/NodeLink.h",
        "Nodes/NodeLink.cpp",
        ],
    deps = [
        "//thirdparty:glfw",
        "//thirdparty:glad",
        "//thirdparty:glm",
        "//thirdparty:imgui",
        "//thirdparty:imnodes",
        "//thirdparty:nlohmann_json",
    ],
    defines = [
        "GLFW_INCLUDE_NONE",
        "WIDTH=1280",
        "HEIGHT=720",
    ],
    includes = ["./"],
    data = ["//res:resources"],
)