cc_binary(
    name = "workshop",
    srcs = [
        "Main.cpp",
        "Common.h",

        "Application.h",
        "Application.cpp",
        "Log.h",
        "Log.cpp",

        "UI/UIManager.h",
        "UI/UIManager.cpp",
        "UI/UIWindow.h",
        "UI/DockspaceWindow.h",
        "UI/NodeEditorWindow.h",
        "UI/NodeEditorWindow.cpp",
        "UI/ViewportWindow.h",
        "UI/ViewportWindow.cpp",

        "Nodes/NodeManager.h",
        "Nodes/NodeManager.cpp",
        "Nodes/Node.h",
        "Nodes/Node.cpp",
        "Nodes/NodeAttribute.h",
        "Nodes/NodeAttribute.cpp",
        "Nodes/NodeLink.h",
        "Nodes/NodeLink.cpp",

        "Rendering/Viewport.h",
        "Rendering/Viewport.cpp",
        "Rendering/Shader.h",
        "Rendering/Shader.cpp",
        "Rendering/Vertex.h",
        "Rendering/Buffer.h",
        "Rendering/Buffer.cpp",
        "Rendering/VertexArray.h",
        ],
    deps = [
        "//thirdparty:glfw",
        "//thirdparty:glad",
        "//thirdparty:glm",
        "//thirdparty:imgui",
        "//thirdparty:imnodes",
        "//thirdparty:nlohmann_json",
        "//thirdparty:spdlog",
        "//thirdparty:pybind",
    ],
    defines = [
        "GLFW_INCLUDE_NONE",
        "WIDTH=1280",
        "HEIGHT=720",
    ],
    includes = ["./"],
    data = ["//res:resources"],
)