cc_binary(
    name = "workshop",
    srcs = [
        "Main.cpp",
        "Common.h",

        "Application.h",
        "Application.cpp",
        "Log.h",
        "Log.cpp",

        "UI/UIManager.h",
        "UI/UIManager.cpp",
        "UI/UIWindow.h",
        "UI/DockspaceWindow.h",
        "UI/NodeEditorWindow.h",
        "UI/NodeEditorWindow.cpp",
        "UI/ViewportWindow.h",
        "UI/ViewportWindow.cpp",

        "Rendering/Viewport.h",
        "Rendering/Viewport.cpp",
        "Rendering/Shader.h",
        "Rendering/Shader.cpp",
        "Rendering/Vertex.h",
        "Rendering/Buffer.h",
        "Rendering/Buffer.cpp",
        "Rendering/VertexArray.h",
        "Rendering/VertexArray.cpp",
        "Rendering/Renderer.h",
        "Rendering/Renderer.cpp",
        "Rendering/RenderCommand.h",
        "Rendering/RenderCommand.cpp",
        ],
    deps = [
        "//thirdparty:glfw",
        "//thirdparty:glad",
        "//thirdparty:glm",
        "//thirdparty:imgui",
        "//thirdparty:imnodes",
        "//thirdparty:spdlog",
        #"//thirdparty:nlohmann_json",
        #"//thirdparty:pybind",
    ],
    defines = [
        "GLFW_INCLUDE_NONE",
        "WIDTH=1280",
        "HEIGHT=720",
    ],
    includes = ["./"],
    data = ["//res:resources"],
)